# libmaxminddb

./: Makefile.am
debian/: changelog  control
pe-build/: build
pe-build/pkg-desc/: libmaxminddb.files
sbuild/: config.yml
tgz2build/: rules
